# Logistics-Robot-with-Computer-Vision

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
Worlds/: Shopping__Rack  shopping_rack.world
arduinobot_description/urdf/: camera.xacro
arm_vision_tracking/: package.xml  setup.cfg  setup.py
arm_vision_tracking/arm_vision_tracking/: object_plane_localizer.py
computer_vision/: README.md
docs/: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
notebooks/: README.md
ros_ws/: README.md
ros_ws/arduinobot_bringup/launch/: simulated_robot.launch.py
ros_ws/arduinobot_description/launch/: gazebo.launch.py
ros_ws/arduinobot_description/urdf/: arduinobot.urdf.xacro  arduinobot_ros2_control.xacro
ros_ws/arduinobot_moveit/config/: arduinobot.urdf  demo_controllers.yaml  kinematics.yaml
ros_ws/arduinobot_moveit/launch/: moveit.launch.py
ros_ws/arduinobot_python/: setup.py
ros_ws/arm_control_py/: package.xml  setup.py
ros_ws/arm_control_py/arm_control_py/: move_to_xyz.py  trajectory_executor.py  visual_servo_node.py
ros_ws/arm_vision_tracking/: setup.py
ros_ws/arm_vision_tracking/arm_vision_tracking/: yolo_detector_node.py
ros_ws/arm_vision_tracking/launch/: full_system.launch.py  (+2 more)
testing/: README.md  analyse_video.py  results_log.txt  run_all_tests.sh  run_lemon_only.sh  run_orange_lemon_tests.sh
testing/screen recordings/: Screencast from 2026-04-19 15-14-21.webm  System-working _banana.webm  systemworking-pairedwithiphonevideo.webm
testing/screenshots/: FoxgloveStudioScreenshot
(+37 files in other folders)
